[package]
name = "sand-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
chrono = "0.4.38"
macroquad = "0.4.11"
noise = "0.9.0"
rand = "0.8.5"
serde = {version="1.0.204", features=["serde_derive"]}
serde_json = "1.0.120"
serde_with = "3.9.0"

[profile.profiling]
inherits = "release"
debug = true
